# zintl

./: Cargo.toml  LICENSE  README.md  gitpagerc
core/zintl/: Cargo.toml
core/zintl-state/: Cargo.toml
core/zintl-state/src/: lib.rs
core/zintl-ui/: Cargo.toml
core/zintl-ui-macro/: Cargo.toml
core/zintl-ui-macro/src/: lib.rs
core/zintl-ui/src/: app.rs  event.rs  lib.rs  model.rs  render.rs
core/zintl-ui/src/view/: composable.rs  context.rs  storage.rs  view.rs
core/zintl-widget/src/: lib.rs
core/zintl/src/: component.rs  composer.rs  hook.rs  lib.rs  runtime.rs  store.rs  view.rs
crates/zintl/: Cargo.toml
crates/zintl-render/: Cargo.toml
crates/zintl-render-math/: Cargo.toml
crates/zintl-render-math/src/: geometry.rs  lib.rs  vec.rs
crates/zintl-render/examples/: run_app.rs
crates/zintl-render/shaders/: fill_rect.wgsl
crates/zintl-render/src/: lib.rs  main.rs  mesh.rs  render.rs  render_object.rs  scaling.rs  tessellator.rs  text.rs  texture.rs  wgpu.rs
crates/zintl-run/: Cargo.toml
crates/zintl-run/src/: lib.rs
crates/zintl-ui/: Cargo.toml
crates/zintl-ui-app/: Cargo.toml
crates/zintl-ui-app/src/: lib.rs
crates/zintl-ui-macro/: Cargo.toml
crates/zintl-ui-macro/src/: lib.rs
crates/zintl-ui-render/: Cargo.toml
crates/zintl-ui-render/src/: lib.rs
crates/zintl-ui-state/: Cargo.toml
crates/zintl-ui-state/src/: lib.rs
crates/zintl-ui-view/: Cargo.toml
crates/zintl-ui-view/src/: composable.rs  context.rs  lib.rs  view.rs
crates/zintl-ui/examples/: app.rs
crates/zintl-ui/src/: app.rs  lib.rs  render.rs
crates/zintl-ui/src/view/: composable.rs  storage.rs  view.rs
crates/zintl-wgpu/: Cargo.toml
crates/zintl-wgpu/src/: lib.rs
crates/zintl-widget/: Cargo.toml
crates/zintl-widget/src/: lib.rs
crates/zintl-winit/: Cargo.toml
crates/zintl/examples/: app.rs
crates/zintl/src/: app.rs  lib.rs  render.rs  style.rs
desktop/zintl-desktop/: Cargo.toml
desktop/zintl-desktop/examples/: app.rs
desktop/zintl-desktop/src/: lib.rs
desktop/zintl-render/: Cargo.toml
desktop/zintl-render-math/src/: geometry.rs  lib.rs  mat.rs  vec.rs
desktop/zintl-render/src/: lib.rs  tessellator.rs  text.rs  texture.rs
desktop/zintl-wgpu/src/: lib.rs
desktop/zintl-wgpu/src/shaders/: fill_rect.wgsl
desktop/zintl-winit/: Cargo.toml
docs/: MVQ.md  index.md  t_doc.html  t_index.html  t_news.html  template.html
docs/internals/: reactive-view.md  text-rendering.md
docs/news/: announcing-alpha-release.md
examples/exlib/: Cargo.toml
examples/exlib/src/: components.rs  event.rs  hooks.rs  lib.rs  render.rs
graphics/rpp/: Cargo.toml
graphics/rpp/src/: context.rs  geometry.rs  lib.rs  shader.rs
graphics/rpp/src/wgpu/: mod.rs  shader.wgsl
graphics/ztglyphs/: Cargo.toml
platform/wnd/: Cargo.toml  build.rs
platform/wnd/examples/: window.rs
platform/wnd/src/: driver.rs  event.rs  lib.rs  platform.rs  prelude.rs  window.rs
platform/wnd/src/driver/: appkit.rs  error.rs  win32.rs
platform/wnd/src/driver/appkit/binding/: mod.rs
platform/wnd/src/driver/appkit/implements/: event.rs  platform.rs  window.rs
platform/wnd/src/driver/win32/: types.rs
platform/wnd/src/driver/win32/implements/: event.rs  mod.rs  platform.rs  window.rs
platform/wnd/src/driver/win32/utils/: string.rs
platform/wnd_ext/WndAppkitCore/: Package.swift
platform/wnd_ext/WndAppkitCore/Sources/WndAppkitCore/: WndAppkitCore.swift
platform/wnd_ext/WndAppkitCore/Tests/WndAppkitCoreTests/: WndAppkitCoreTests.swift
platform/wnd_ext/wnd_appkit/: Package.swift
platform/wnd_ext/wnd_appkit/Tests/wnd_appkitTests/: wnd_appkitTests.swift
platform/ztloop/: Cargo.toml  build.rs
platform/ztloop/examples/: loop.rs
platform/ztloop/src/: dispatcher.rs  lib.rs  osloop.rs  runloop.rs  runner.rs
platform/ztloop/src/implementation/: appkit.rs  appkit_binding.rs  mod.rs
platform/ztloop/src/runner/: parallel.rs  sequenced.rs
platform/ztloop_ext/ZTLoopAppkit/: Package.swift
platform/ztloop_ext/ZTLoopAppkit/Sources/ZTLoopAppkit/: ZTLoopAppkit.swift
platform/ztloop_ext/ZTLoopAppkit/Tests/ZTLoopAppkitTests/: ZTLoopAppkitTests.swift
test/zintl-test/: Cargo.toml
test/zintl-test-mvq/: Cargo.toml
test/zintl-test/src/: lib.rs  runner.rs  tests.rs  views.rs
web/zintl-wasm/: Cargo.toml
web/zintl-wasm/src/: lib.rs  runtime.rs
