[workspace]
resolver = "3"
members = [
    "graphics/rpp",
    "platform/wnd",
    "graphics/ztglyphs", "core/zintl", "examples/exlib",
]

[workspace.package]
license = "Apache-2.0"
description = "Powerful yet simple GUI toolkit for Rust."
authors = ["Hasegawa, Raku <raku@exhibition.jp>"]
version = "0.0.1-alpha.2"

[workspace.dependencies]
windows = "0.58.0"
raw-window-handle = "0.6"
