[package]
name = "zintl"
edition = "2024"
description.workspace = true
license.workspace = true
authors.workspace = true
version.workspace = true

[dependencies]
zintl-ui.workspace = true
zintl-ui-macro.workspace = true

[dev-dependencies]
zintl-desktop.workspace = true
zintl-widget.workspace = true
