[package]
name = "zintl-ui"
edition = "2021"
authors.workspace = true
version.workspace = true

[dependencies]
zintl-ui-view.workspace = true
zintl-ui-macro.workspace = true
zintl-ui-app.workspace = true
zintl-ui-state.workspace = true
zintl-ui-render.workspace = true

[dev-dependencies]
zintl-run.workspace = true
