[package]
name = "zintl-wgpu"
edition = "2024"
description.workspace = true
license.workspace = true
authors.workspace = true
version.workspace = true

[dependencies]
wgpu = "25"
zintl-render.workspace = true
zintl-render-math.workspace = true
bytemuck.workspace = true
cgmath.workspace = true
raw-window-handle = "0.6"
