[package]
name = "zintl"
edition = "2024"
description.workspace = true
license.workspace = true
authors.workspace = true
version.workspace = true

[dependencies]
zintl-ui.workspace = true
zintl-ui-macro.workspace = true
zintl-render.workspace = true
zintl-widget.workspace = true
zintl-run.workspace = true
