[package]
name = "zintl-desktop"
edition = "2024"
description.workspace = true
license.workspace = true
authors.workspace = true
version.workspace = true

[dependencies]
zintl-ui.workspace = true
zintl-render.workspace = true
zintl-render-math.workspace = true
zintl-wgpu.workspace = true
winit = "0.30"
pollster = "0.3"
