[package]
name = "zintl-render"
edition = "2024"
description.workspace = true
license.workspace = true
authors.workspace = true
version.workspace = true

[features]
wgpu = []
default = ["wgpu"]

[dependencies]
zintl-ui.workspace = true
zintl-render-math.workspace = true
bytemuck.workspace = true
ab_glyph = "0.2.29"
cgmath.workspace = true
